--- a/WebContent/resources/css/myApp.css
+++ b/WebContent/resources/css/myApp.css
@@ -1,137 +1,664 @@
-html, body {height: 100%;}
-.floatleft {float:left}
-.floatright {float:right}
-.k-padding{
-  padding:150px 0;
-}
-.k-padding-top-4 {
-  padding-top: 40px;
-}
-/* registration and login page start */
-.kp-button{
-  	text-align: left;
-    padding: 10px 25px;
-    font-weight: 700;
-    color: #222;
-    border: 2px solid cadetblue;
-    text-transform: uppercase;
-    height: 40px;
-    display: inline-block;
-    border-radius: 5px;
-    outline: none;
-    background-color: #fff;
-    line-height: 19px;
-    transition: .3s;
-}
-.kp-button:hover{
-  background-color: grey;
-  color: #fff;
-  text-decoration: none;
-}
-.kp-button-2{
-  background: #ef6644;
-  color: #fff;
-}
-.kp-button-2:hover{
-    background-color: #fff;
-    color: #ef6644;
-}
-.contact-info {
-  display: inline-block;
-  margin: auto;
+/*
+ * Base structure
+ */
+html,
+ body {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background: url(http://wallpaper.zone/img/3711224.jpg) no-repeat center center fixed; 
+  background-size: cover;
+  
+  height: 100%;
+  color: black;
   text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5); 
 }
-.contact-us-form .single-input.one-half:nth-child(1){
-  padding-right: 15px;
-}
-.form-area .form-inner .single-input {
-  margin-bottom:20px;
-}
-.one{
-	padding: 5px;
-  width: 100%;
-}
-.one-half {
-  float: left;
-  width: 50%;
-  padding: 5px;
-}
-.form-area .form-inner .single-input label {
-  color: #333;
-  display: block;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 15px;
-  margin-bottom: 10px;
-}
-.form-area .form-inner .single-input label span{
-  color: #ff0000;
-  display: inline-block;
-  margin-left: 5px;
-}
-.form-area .form-inner input[type="text"] {
-  background: #ffffff none repeat scroll 0 0;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 15px;
-  width: 100%;
-}
-.form-area .form-inner input[type="password"] {
-  background: #ffffff none repeat scroll 0 0;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 15px;
-  width: 100%;
-}
-.form-area .form-inner input[type="email"] {
-  background: #ffffff none repeat scroll 0 0;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 15px;
-  width: 100%;
-}
-.form-area .form-inner input[type="tel"] {
-  background: #ffffff none repeat scroll 0 0;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 15px;
-  width: 100%;
-}
-.form-area .form-inner input[type="radio"] {
-  margin: 12px 0px 15px 10px;
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~|| body || header || footer ||~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.navbar-default {
+	background: #fff;
+	border: none;
+	padding: 0em;
 }
 
+.nav>li>a {
+	font-size: 1.1em;
+}
+
+.navbar {
+	margin-bottom: 0;
+}
+
+.navbar-brand {
+	float: left;
+	height: 95px;
+	padding: 30px 0 0 175px;
+	font-size: 3em;
+	line-height: 20px;
+	color: #000 !important;
+	font-family: 'Marcellus', serif;
+	background: url(../img/binder.png) no-repeat -6px -7px;
+}
+
+.navbar-brand span {
+	display: block;
+	font-size: .3em;
+	letter-spacing: 5px;
+	padding-left: .3em;
+	line-height: 2em;
+}
+
+.navbar-nav {
+	margin: 1.5em 0 0;
+	float: right;
+}
+
+.navbar {
+	border-radius: 0;
+}
+
+nav.navbar.navbar-default.navbar-fixed-top {
+	background: rgba(255, 255, 255, 0);
+}
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
+	{
+	color: #4B8F56;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover,
+	.navbar-default .navbar-nav>.open>a:focus {
+	color: #F89422;
+	background-color: transparent;
+}
+
+/ /*------- {{ effect-6 }} -------*/
+/
+.navbar-nav>li>a {
+	padding: 5px 40px;
+}
+
+.link-effect-12 a {
+	margin: 0 10px;
+	position: relative;
+	overflow: hidden;
+	display: inline-block;
+	-moz-transition: ease-out 0.3s 0.1s;
+	-o-transition: ease-out 0.3s 0.1s;
+	-webkit-transition: ease-out 0.3s;
+	-webkit-transition-delay: 0.1s;
+	transition: ease-out 0.3s 0.1s;
+	font-family: 'Marcellus', serif;
+}
+
+.link-effect-12 a span::before {
+	width: 100%;
+	height: 1px;
+	background: #4B8F56;
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	-moz-transition: 0.1s;
+	-o-transition: 0.1s;
+	-webkit-transition: 0.1s;
+	transition: 0.1s;
+	-moz-transform: translateX(-100%);
+	-ms-transform: translateX(-100%);
+	-webkit-transform: translateX(-100%);
+	transform: translateX(-100%);
+}
+
+.link-effect-12 a span::after {
+	width: 100%;
+	height: 1px;
+	background: #4B8F56;
+	content: "";
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	-moz-transition: 0.1s 0.2s;
+	-o-transition: 0.1s 0.2s;
+	-webkit-transition: 0.1s;
+	-webkit-transition-delay: 0.2s;
+	transition: 0.1s 0.2s;
+	-moz-transform: translateX(100%);
+	-ms-transform: translateX(100%);
+	-webkit-transform: translateX(100%);
+	transform: translateX(100%);
+}
+
+.link-effect-12 a::before {
+	width: 1px;
+	height: 100%;
+	background: #4B8F56;
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	-moz-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	-webkit-transform: translateY(100%);
+	transform: translateY(100%);
+	-moz-transition: 0.1s 0.3s;
+	-o-transition: 0.1s 0.3s;
+	-webkit-transition: 0.1s;
+	-webkit-transition-delay: 0.3s;
+	transition: 0.1s 0.3s;
+}
+
+.link-effect-12 a::after {
+	width: 1px;
+	height: 100%;
+	background: #4B8F56;
+	content: "";
+	position: absolute;
+	right: 0px;
+	bottom: 0;
+	-moz-transform: translateY(-100%);
+	-ms-transform: translateY(-100%);
+	-webkit-transform: translateY(-100%);
+	transform: translateY(-100%);
+	-moz-transition: 0.1s 0.1s;
+	-o-transition: 0.1s 0.1s;
+	-webkit-transition: 0.1s;
+	-webkit-transition-delay: 0.1s;
+	transition: 0.1s 0.1s;
+}
+.link-effect-12 a:hover {
+	color: #4B8F56;
+}
+.link-effect-12 a:hover::before, .link-effect-12 a:hover::after {
+	-moz-transform: translateX(0);
+	-ms-transform: translateX(0);
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+}
+.link-effect-12 a:hover span::before, .link-effect-12 a:hover span::after
+	{
+	-moz-transform: translateX(0);
+	-ms-transform: translateX(0);
+	-webkit-transform: translateX(0);
+	transform: translateX(0);
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
+	.navbar-default .navbar-nav>.active>a:focus {
+	color: #4B8F56;
+	background-color: transparent;
+}
+.navbar-collapse {
+	padding: 0;
+}
+a.navbar-brand {
+	margin-left: 1em;
+}
+.footer {
+	background: rgba(70, 70, 70, 0.62);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 2em;
+}
+.footer-bottom {
+	/* margin: 1em 0em 3em 0em; */
+}
+.footer-bottom-left {
+	float: left;
+}
+.footer-bottom-left p {
+	color: #fff;
+	font-size: 11px;
+	margin: 0.5em 0 0;
+	text-transform: capitalize;
+	/* line-height: 1.8em; */
+}
+.footer-bottom-left p a {
+	color: #e5c6ec;
+	text-decoration: none;
+}
+.footer-bottom-left p a:hover {
+	color: #fff;
+}
+@media ( max-width :1280px) {
+	.navbar-default {
+		padding: 0 1em;
+	}
+}
+@media ( max-width :991px) {
+	.navbar-default {
+		padding: 0 1em;
+	}
+	.nav>li>a {
+		padding: 10px 10px !important;
+		font-size: 1em;
+	}
+	.footer {
+		padding: 3em 0 2em;
+	}
+}
+@media ( max-width :880px) {
+	.navbar-toggle {
+		margin: 1.1em 0 0;
+	}
+	.navbar-brand {
+		height: 65px;
+		padding: 15px 0 0 71px;
+		background: url(../img/binder_small.png) no-repeat -8px -21px;
+	}
+	.navbar-default .navbar-toggle .icon-bar {
+		background-color: #000;
+	}
+	.navbar-default .navbar-toggle {
+		border-color: #000;
+	}
+	.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+		{
+		background-color: transparent;
+	}
+	.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+		border: none;
+	}
+	.navbar-collapse {
+		box-shadow: none;
+	}
+	.navbar-nav {
+		margin: 0;
+		float: none;
+		text-align: center;
+		background: #272727;
+		padding: 1em 0;
+	}
+	.navbar-default .navbar-nav>li>a {
+		color: #fff;
+	}
+}
+@media ( max-width :767px) {
+	.navbar-toggle {
+		margin: 1.1em 0 0;
+	}
+	.navbar-brand {
+		height: 65px;
+		padding: 15px 0 0 71px;
+		background: url(../img/binder_small.png) no-repeat -8px -21px;
+	}
+	.navbar-default .navbar-toggle .icon-bar {
+		background-color: #000;
+	}
+	.navbar-default .navbar-toggle {
+		border-color: #000;
+	}
+	.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+		{
+		background-color: transparent;
+	}
+	.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+		border: none;
+	}
+	.navbar-collapse {
+		box-shadow: none;
+	}
+	.navbar-nav {
+		margin: 0;
+		float: none;
+		text-align: center;
+		background: #272727;
+		padding: 1em 0;
+	}
+	.navbar-default .navbar-nav>li>a {
+		color: #fff;
+	}
+}
+@media ( max-width :480px) {
+	.navbar-brand {
+		font-size: 2.5em;
+	}
+	.footer {
+		padding: 2em 0 2em;
+	}
+	.footer-bottom-left p {
+		margin: 0 0 1em;
+	}
+	.footer-bottom {
+		padding-top: 1em;
+	}
+	.footer-bottom-left {
+		float: none;
+		text-align: center;
+	}
+}
+@media ( max-width :384px) {
+	.navbar-brand {
+		font-size: 2em;
+	}
+	.navbar-default {
+		padding: 0 0.5em;
+	}
+}
+@media ( max-width :320px) {
+	.navbar-brand {
+		height: 50px;
+		padding: 9px 0 0 60px;
+		background: url(../img/binder_small.png) no-repeat -8px -21px;
+		background-size: 256%;
+		font-size: 1.7em;
+	}
+	.navbar-brand span {
+		letter-spacing: 3px;
+	}
+	.navbar-toggle {
+		margin: 0.55em 0 0;
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~|| body || header || footer ||~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+.floatleft {
+	float: left
+}
+.floatright {
+	float: right
+}
+/* .k-padding {
+	padding: 150px 0;
+} */
+.k-padding-top-4 {
+	padding-top: 40px;
+}
+/* Home Page start */
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: black;
+}
+/*
+ * Custom default button 
+ */
+.btn-default,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #a2a2a2;
+}
+.btn-default:hover {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #749ec3;
+}
+
+/*
+ * Extra markup and styles for table-esque vertical and horizontal centering 
+ */
+.site-wrapper {
+  /* background: url(http://wallpaper.zone/img/3711224.jpg) no-repeat center center fixed; 
+  background-size: cover; */
+  display: table;
+  width: 100%;
+  /* height: 100%; */ /* For at least Firefox */
+  min-height: 85%;
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: top;
+}
+.home-container {
+  margin-right: auto;
+  margin-left: auto;
+}
+/*
+ * Padding for spacing 
+ */
+.inner {
+  padding: 30px;
+}
+/*
+ * Home
+ */
+.home {
+  padding: 0 20px;
+}
+.home .btn-lg {
+  padding: 10px 20px;
+  font-weight: bold;
+}
+/*
+ * Footer
+ */
+.mastfoot {
+  color: #999; /* IE8 proofing */
+  color: rgba(255,255,255,.5);
+}
+/*
+ * Affix and center
+ */
+@media (min-width: 768px) {
+  /* Pull out the header and footer */
+  .masthead {
+    position: fixed;
+    top: 0;
+  }
+  .mastfoot {
+    position: fixed;
+    bottom: 0;
+  }
+  /* Start the vertical centering */
+  .site-wrapper-inner {
+    vertical-align: middle;
+  }
+  /* Handle the widths */
+  .masthead,
+  .mastfoot,
+  .home-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+  }
+}
+@media (min-width: 992px) {
+  .masthead,
+  .mastfoot,
+  .home-container {
+    width: 700px;
+  }
+}
+/* ~~~~~~~~~~~~~~~~~~~~~~ Home Page end ~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* ~~~~~~~~~~~~~ registration and login page start ~~~~~~~~~~~~ */
+.kp-button {
+	text-align: left;
+	padding: 10px 25px;
+	font-weight: 700;
+	color: #222;
+	border: 2px solid cadetblue;
+	text-transform: uppercase;
+	height: 40px;
+	display: inline-block;
+	border-radius: 5px;
+	outline: none;
+	background-color: #fff;
+	line-height: 19px;
+	transition: .3s;
+}
+.kp-button:hover {
+	background-color: grey;
+	color: #fff;
+	text-decoration: none;
+}
+.kp-button-2 {
+	background: #ef6644;
+	color: #fff;
+}
+.kp-button-2:hover {
+	background-color: #fff;
+	color: #ef6644;
+}
+.contact-info {
+	display: inline-block;
+	margin: auto;
+	text-align: center;
+}
+.contact-us-form .single-input.one-half:nth-child(1) {
+	padding-right: 15px;
+}
+.form-area {
+    padding: 25px;
+}
+.form-area .form-inner .single-input {
+	margin-bottom: 20px;
+}
+.one {
+	padding: 5px;
+	width: 100%;
+}
+.one-half {
+	float: left;
+	width: 50%;
+	padding: 5px;
+}
+.form-area .form-inner .single-input label {
+	color: #333;
+	display: block;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 15px;
+	margin-bottom: 10px;
+}
+.form-area .form-inner .single-input label span {
+	color: #ff0000;
+	display: inline-block;
+	margin-left: 5px;
+}
+.form-area .form-inner input[type="text"] {
+	background: #ffffff none repeat scroll 0 0;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	width: 100%;
+}
+.form-area .form-inner input[type="password"] {
+	background: #ffffff none repeat scroll 0 0;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	width: 100%;
+}
+.form-area .form-inner input[type="email"] {
+	background: #ffffff none repeat scroll 0 0;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	width: 100%;
+}
+.form-area .form-inner input[type="tel"] {
+	background: #ffffff none repeat scroll 0 0;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	width: 100%;
+}
+.form-area .form-inner input[type="radio"] {
+	margin: 12px 0px 15px 10px;
+}
 textarea {
-    width: 100%;
-    height: 10em;
-    background: #ffffff none repeat scroll 0 0;
-    border: 2px solid #ddd;
-    border-radius: 5px;
-    line-height: 20px;
-    padding: 0 15px;
+	width: 100%;
+	height: 10em;
+	background: #ffffff none repeat scroll 0 0;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+	line-height: 20px;
+	padding: 0 15px;
 }
 .form-area .form-inner label {
-  background: rgb(236, 236, 236) none repeat scroll 0 0;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 15px;
-  width: 100%;
+	background: rgb(236, 236, 236) none repeat scroll 0 0;
+	border: 2px solid #ddd;
+	border-radius: 5px;
+	height: 40px;
+	line-height: 40px;
+	padding: 0 15px;
+	width: 100%;
 }
 .col-md-8.col-md-offset-2.col-sm-8.col-sm-offset-2 {
-    background-color: rgba(0, 0, 0, 0.32);
-    padding: 2em 2em 3em 2em;
-    border-style: outset;
-    border-width: 8px;
-    border-radius: 24px;
+	background-color: rgba(0, 0, 0, 0.2);
+	padding: 2em 2em 3em 2em;
 }
-/* registration and login page end */
+/* ~~~~~~~~~~~~~ registration and login page end ~~~~~~~~~~~~~ */
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~ view_blog ~~~~~~~~~~~~~~~~~~~~~~~~~ */
+#blog-name{
+  margin: 1em 0 .5em 0;
+}
+.minor-header{
+  margin-top: 20px;
+}
+#blog-area{
+  background-color: whitesmoke;
+  padding: 2px 15px 15px;
+  -webkit-box-shadow: 0 0 10px -2px rgba(0,0,0,0.2);
+   box-shadow: 0 0 10px -2px rgba(0,0,0,0.2);
+}
+.entry-title{
+  margin-bottom: 1.2em;
+}
+#blog-area img{
+  margin: 1em auto;
+}
+#blog-area .author{
+  margin: 25px auto 10px;
+}
+.widget{
+  padding: 2px 10px 10px;
+  background-color: whitesmoke;
+  -webkit-box-shadow: 0 0 10px -2px rgba(0,0,0,0.2);
+   box-shadow: 0 0 10px -2px rgba(0,0,0,0.2);
+}
+@media screen and (max-width: 767px) {
+  #blog-name{
+    text-align: center;
+    margin: 1em auto 0.2em;
+  }
+  .widget:first-of-type{
+    margin-top: 2em;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .widget:first-of-type{
+    margin-top: 2em;
+  }
+}
+.media {
+    color: black;
+}
+strong {
+    color: black;
+}
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /view_blog ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+ 
+/* ~~~~~~~~~~~~~~~~~~~~~ sticky & floating footer ~~~~~~~~~~~~~~~~~~~~~~~ */
+
+.navigation{
+	padding-top: 95px;
+} 
+p {
+	margin: 0;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Marcellus', serif;
+	font-weight: 100;
+	margin: 0;
+	color: black;
+}
+ul, label {
+	margin: 0;
+	padding: 0;
+}
+body a:hover {
+	text-decoration: none;
+}
