--- a/WebContent/resources/css/myApp.css
+++ b/WebContent/resources/css/myApp.css
@@ -59,6 +59,7 @@ html,
 
 nav.navbar.navbar-default.navbar-fixed-top {
 	background: rgba(255, 255, 255, 0);
+	box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus
@@ -76,6 +77,9 @@ nav.navbar.navbar-default.navbar-fixed-top {
 /
 .navbar-nav>li>a {
 	padding: 5px 40px;
+}
+ul.dropdown-menu {
+    background-color: rgba(158, 158, 158, 0.61);
 }
 
 .link-effect-12 a {
@@ -639,6 +643,9 @@ textarea {
 strong {
     color: black;
 }
+.blog-list-font{
+	font-size: x-large;
+}
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /view_blog ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
@@ -672,6 +679,7 @@ h2.job-h2 {
 } 
 p {
 	margin: 0;
+	text-align: justify;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Marcellus', serif;
