--- a/WebContent/resources/css/myApp.css
+++ b/WebContent/resources/css/myApp.css
@@ -677,7 +677,37 @@ h2.job-h2 {
   padding: 20px 0 20px 0;
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ post_job ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
- 
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Friend ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+.friend-list-font{
+	font-size: x-large;
+    margin-bottom: 10px;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Friend ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */ 
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Forum ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+div#forum-page {
+    margin-bottom: 5em;
+}
+.comment-zone{
+	background-color: white;
+    margin-top: 3em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Forum ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
 /* ~~~~~~~~~~~~~~~~~~~~~ sticky & floating footer ~~~~~~~~~~~~~~~~~~~~~~~ */
 
 .navigation{
