--- a/WebContent/resources/css/myApp.css
+++ b/WebContent/resources/css/myApp.css
@@ -745,6 +745,45 @@ h1#x-name {
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Forum ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Chat ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+.conversation-area{
+    height: 100%;
+    padding: 2em;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.14),rgba(255, 255, 255, 0.96),rgba(0, 0, 0, 0.14));
+    padding-top: 1em;
+}
+.chat-header {
+    height: 100%;
+    width: 100%;
+    background: deepskyblue;
+    box-shadow: 0 1px 1px;
+    display: table;
+}
+.chat-header h4 {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.chat-row{
+    height:3em;
+}
+.content-wrap {
+    overflow: auto;
+    width: 100%;
+    height: 19em;
+    background: white;
+    padding: 0 2em 0 2em;
+    margin-top: 1em;
+    border-radius: 3px;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Chat ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+
+
+
+
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Stylist Borders ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 .frameone {
     border-style: groove;
