--- a/WebContent/resources/css/myApp.css
+++ b/WebContent/resources/css/myApp.css
@@ -8,13 +8,19 @@ html,
   -o-background-size: cover;
   background: url(http://www.planwallpaper.com/static/images/wallpaper-hd-3151.jpg) no-repeat center center fixed; 
   background-size: cover;
-  
   height: 100%;
   color: black;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5); 
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~|| body || header || footer ||~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.a-hover:hover {
+	font-size: x-large;
+}
+.navbar-default .navbar-nav>li>a {
+    color: #6d6d6d;
+    text-shadow: 2px 2px 4px white;
+}
 .navbar-default {
 	background: #fff;
 	border: none;
@@ -80,7 +86,7 @@ nav.navbar.navbar-default.navbar-fixed-top {
 	padding: 5px 40px;
 }
 ul.dropdown-menu {
-    background-color: rgba(158, 158, 158, 0.61);
+    background-color: rgba(245, 222, 179, 0.8);
 }
 
 .link-effect-12 a {
@@ -595,8 +601,11 @@ textarea {
 	width: 100%;
 }
 .col-md-8.col-md-offset-2.col-sm-8.col-sm-offset-2 {
-	background: linear-gradient(to right, rgba(0, 0, 0, 0.54),white,rgba(0, 0, 0, 0.54));
 	padding: 2em 2em 3em 2em;
+    background: linear-gradient(to bottom right, wheat, rgba(255, 255, 0, 0), rgba(255, 255, 0, 0), wheat);
+    background-color: rgba(255, 255, 255, 0.65);
+    font-family: -webkit-pictograph;
+    border-radius: 13px;
 }
 /* ~~~~~~~~~~~~~ registration and login page end ~~~~~~~~~~~~~ */
 
@@ -719,9 +728,10 @@ h1#x-name {
     background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(239, 218, 143, 0.78),rgba(255, 255, 255, 0));
 }
 .x-padding{
-	padding: 4px;
-	font-size: 18px;
-    color: rgba(0, 0, 0, 0.46);
+	    padding: 4px;
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.8);
+    text-shadow: 2px 2px 2px black;
 }
 .x-span{
 	font-size: 20px;
@@ -1090,7 +1100,7 @@ body a:hover {
 	margin:1em 0 0 2em;
 }
 .p-mask ul li a{
-	font-size:1em;
+	font-size: 2em;
 	text-decoration:none;
 	color:#fff;
 	font-family: 'Marcellus', serif;
